--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 
 /* Your CSS Code here. */
 #btn{
-    background-color: black;color: white;border-radius: 5px;
+    background-color: black;color: white;border-radius: 5px;border:none;
 }
 
 #btn:hover{
-    background-color: yellow;color: black;border-radius: 30px;
+    background-color: yellow;color: black;border-radius: 30px;border:none;
 }
